--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "geolocator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,9 +15,10 @@
     "express": "^5.0.0-beta.2",
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
